Adding the web browser wrapper control

--- a/Metro.Controls/Controls/Controls.csproj
+++ b/Metro.Controls/Controls/Controls.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{F00C6FD5-F828-4167-A04D-B5C04F06B57E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Metro.Controls</RootNamespace>
-    <AssemblyName>Metro.Controls</AssemblyName>
+    <RootNamespace>Metro</RootNamespace>
+    <AssemblyName>MetroControls</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -100,6 +100,10 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Page Include="Controls\WebViewHostControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -107,10 +111,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\DatePicker.cs" />
+    <Compile Include="Controls\WebViewHostControl.xaml.cs">
+      <DependentUpon>WebViewHostControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="LocalisableDescriptionAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\SmallLogo.png" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
